<resources>
    <string name="app_name">All In One Status Downloader</string>
    <string name="aboutInfo">All In One Stats Downloader is for save Whatsapp status, TikTok Video, Instagram story, Instagram post from link, Facebook video easily.</string>
    <string name="about_content">Version: 1.0.alpha1\10Developed by:-\10KCDeveloperss</string>
    <string name="about_title">About</string>
    <string name="aboutus_name">About Us</string>
    <string name="aboutus_tag">Know More About App</string>
    <string name="admob_app_id">ca-app-pub-2731222959309950~4243840103</string>
    <string name="admob_banner_ad">ca-app-pub-2731222959309950/1537446400</string>
    <string name="admob_interstitial_ad">ca-app-pub-2731222959309950/1802321660</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="company_name_title">Company</string>
    <string name="company_tag_name">KC Developerss</string>
    <string name="contact_tag">+91–9588262720</string>
    <string name="contact_title">Contact</string>
    <string name="email_tag">christinkoshy1998@gmail.com</string>
    <string name="email_title">Email</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_name">Facebook</string>
    <string name="fb_placement_id">797658384096221_797661404095919</string>
    <string name="fb_placement_interstitial_id">797658384096221_797667784095281</string>
    <string name="fcebook_tag">Download Facebook Videos</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fourth_how_too">2. Open All in One Status Saver</string>
    <string name="gallery_name">Gallery</string>
    <string name="gallery_tag">View All Your Downloaded Media</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="insta_app_name">Instagram</string>
    <string name="insta_tag">Download Instagram Images &amp; Videos</string>
    <string name="login">Login</string>
    <string name="more_app_name">More App</string>
    <string name="more_app_tag">View Our Other Apps</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="privacy_tag">Click to Read Privacy Policy</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="rate_app_name">Rate App</string>
    <string name="rate_tag">Show Some Love. Rate on Play Store</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="second_how_too">2. Share with All in One Status Saver</string>
    <string name="share_app_message">Download All Videos using this app. Download Now</string>
    <string name="share_app_name">Share App</string>
    <string name="share_app_tag">Share App with Your Friends</string>
    <string name="share_image_via">Share File via…</string>
    <string name="share_txt">Hey view/download this image</string>
    <string name="stories">Stories</string>
    <string name="tag_line">Download All Status on a Single Click</string>
    <string name="tiktok_app_name">TikTok</string>
    <string name="tiktok_tag">Download TikTok Videos</string>
    <string name="twitter_app_name">Twitter</string>
    <string name="twitter_tag">Download Twitter Images &amp; Videos</string>
    <string name="version_name">Version</string>
    <string name="version_tag">1.0.alpha1</string>
    <string name="view_stories">View Stories and Download from Private Account</string>
    <string name="website_tag">www.theknowledgeset.com</string>
    <string name="website_title">Website</string>
    <string name="whatsapp_app_name">WA &amp; WA Business</string>
    <string name="whatsapp_tag">Save Whatsapp Status Image &amp; Videos</string>
    <string name="your_app_is_not_updated">Your app is not updated</string>
    <string name="new_update_is_available_on_play_store">New update is available on PLay store</string>
    <string name="click_to_update">Click to Update</string>
</resources>