<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/et_back">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10.0dip"
            android:text="@string/your_app_is_not_updated"
            android:textColor="@color/white"
            android:textSize="20.0sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_warrning" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10.0dip"
            android:layout_marginTop="10.0dip"
            android:gravity="center_horizontal"
            android:text="@string/new_update_is_available_on_play_store"
            android:textColor="@color/white"
            android:layout_marginLeft="10.0dip" />

        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginEnd="30.0dip"
            android:layout_marginBottom="20.0dip"
            android:background="@drawable/et_back"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:padding="14.0dip"
            android:text="@string/click_to_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15.0sp" />
    </LinearLayout>
</RelativeLayout>