<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ads="http://schemas.android.com/tools"
    android:background="#fff8f7fc"
    android:tag="layout/activity_instagram">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/adView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@id/RLTopLayout"
                android:layout_width="fill_parent"
                android:layout_height="250.0dip"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@id/imBack"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_centerVertical="true"
                        android:layout_margin="10.0dip"
                        android:padding="5.0dip"
                        android:src="@drawable/ic_back" />

                    <ImageView
                        android:id="@id/imInfo"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10.0dip"
                        android:padding="10.0dip"
                        android:src="@drawable/ic_about"
                        android:layout_alignParentRight="true"
                        app:tint="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/LLOpenInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@id/TVTitle"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_instagram"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/TVTitle"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10.0dip"
                        android:text="Instagram"
                        android:textColor="@color/white"
                        android:textSize="16.0sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RLLoginInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/LLOpenInstagram"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/tvLoginInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="10.0dip"
                        android:text="Download from Private Account"
                        android:textColor="@color/white"
                        android:textSize="13.0sp" />

                    <Switch
                        android:id="@+id/SwitchLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tvLoginInstagram"
                        android:clickable="false"
                        android:text=""
                        android:theme="@style/SCBSwitch"
                        android:layout_toEndOf="@id/tvLoginInstagram" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@id/lnr_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RLTopLayout"
                android:layout_marginTop="-30.0dip"
                android:orientation="vertical"
                android:paddingStart="10.0dip"
                android:paddingEnd="10.0dip"
                android:paddingBottom="10.0dip">

                <RelativeLayout
                    android:id="@id/RLEdittextLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5.0dip"
                    android:layout_marginEnd="5.0dip"
                    android:background="@drawable/et_back"
                    android:elevation="3.0dip">

                    <EditText
                        android:id="@id/et_text"
                        android:layout_width="fill_parent"
                        android:layout_height="60.0dip"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:hint="Paste Link"
                        android:padding="15.0dip"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="15.0sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@id/RLDownloadLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5.0dip"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginEnd="5.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@drawable/et_back"
                    android:elevation="3.0dip"
                    android:orientation="horizontal"
                    android:padding="15.0dip"
                    android:weightSum="2.0">

                    <TextView
                        android:id="@id/login_btn1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/et_back"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:padding="14.0dip"
                        android:text="Download"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15.0sp" />

                    <TextView
                        android:id="@id/tv_paste"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/et_back"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:padding="14.0dip"
                        android:text="Paste"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15.0sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10.0dip"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvViewStories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10.0dip"
                        android:text="@string/view_stories"
                        android:textColor="@color/black"
                        android:textSize="13.0dip" />

                    <!--                        android:layout_below="@id/RLM"-->

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="100.0dip"
                        android:layout_height="wrap_content"
                        android:layout_margin="5.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:background="@drawable/selected_tab"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:padding="8.0dip"
                        android:text="@string/login"
                        android:textColor="@color/white" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RVUserList"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:nestedScrollingEnabled="false" />

                <ProgressBar
                    android:id="@+id/pr_loading_bar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RVStories"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:nestedScrollingEnabled="false" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@id/RVUserList"
                    android:orientation="vertical"
                    android:tag="binding_1">

                    <include
                        android:id="@id/layoutHowTo"
                        layout="@layout/layout_how_to" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_ad" />
</RelativeLayout>